--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "prettier": "^1.15.3",
+    "react-testing-library": "^5.4.4",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
